# zimra-fdms-python

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
examples/: config_example.py  fdms_config.example.json
src/zimra_fdms/: __init__.py  exceptions.py
src/zimra_fdms/client/: __init__.py  fdms_client.py  http_client.py
src/zimra_fdms/config/: __init__.py  config_loader.py  config_validator.py  fdms_config.py
src/zimra_fdms/crypto/: __init__.py  certificate.py  keystore.py  signature.py
src/zimra_fdms/models/: __init__.py  device.py  fiscal_day.py  receipt.py  tax.py
src/zimra_fdms/services/: __init__.py  certificate.py  device.py  fiscal_day.py  receipt.py  verification.py
src/zimra_fdms/utils/: __init__.py  logger.py  qrcode.py
src/zimra_fdms/validators/: __init__.py  receipt.py
tests/unit/: test_config.py
